src/objects/BarQR__Barcode_Config__c.object
<CustomObject>
    <fields>
        <fullName>BarQR__Allow_Save_to_formats__c</fullName>
        <label>Allow Save to formats</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PNG</fullName>
                </value>
                <value>
                    <fullName>JPEG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BarQR__Barcode_Type__c</fullName>
        <label>Barcode Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BarQR__Barcode_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BarQR__Field_API_Name__c</fullName>
        <inlineHelpText>Please enter the API name of the field from which barcode needs to be generated</inlineHelpText>
        <label>Field API Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BarQR__Font_Rendering__c</fullName>
        <label>Font Rendering</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BarQR__Font_Rendering_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BarQR__Image_Rotation__c</fullName>
        <description>Field to denote if redered barcode needs to be returned.</description>
        <inlineHelpText>Specify if barcode image needs to be returned</inlineHelpText>
        <label>Image Rotation</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BarQR__Barcode_Image_Rotations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BarQR__Object_API_Name__c</fullName>
        <inlineHelpText>Please enter API name of the object from which barcode data is taken</inlineHelpText>
        <label>Object API Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BarQR__Scale_X__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Barcode Scale value X axis</description>
        <inlineHelpText>Barcode scale value on X axis</inlineHelpText>
        <label>Scale X</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BarQR__Scale_Y__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Barcode Scale value Y axis</description>
        <inlineHelpText>Barcode scale value on Y axis</inlineHelpText>
        <label>Scale Y</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BarQR__Show_Text_Also__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Option to decide if barcode text also needs to be shown</description>
        <inlineHelpText>Checkbox to denote if the text also needs to be rendered next to barcode</inlineHelpText>
        <label>Show Text Also?</label>
        <type>Checkbox</type>
    </fields>
    <label>Barcode Config</label>
    <listViews>
        <fullName>BarQR__All</fullName>
        <columns>NAME</columns>
        <columns>BarQR__Object_API_Name__c</columns>
        <columns>BarQR__Field_API_Name__c</columns>
        <columns>BarQR__Barcode_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Barcode Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Barcode Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BarQR__Only_Allow_Alphanumeric_Names</fullName>
        <active>true</active>
        <description>Only Alphanumeric characters are allowed in name field</description>
        <errorConditionFormula>NOT(REGEX( Name ,&quot;^[a-zA-Z0-9]*$&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Please enter an alphanumeric and unique names without spaces.</errorMessage>
    </validationRules>
</CustomObject>